# Cortex

./: .dockerignore  .env.example  .gitignore  AGENTIC_UPGRADE_COMPLETE.md  ALL_PHASES_COMPLETE.md  API_DOCUMENTATION.md  API_KEY_GENERATION_GUIDE.md  CHANGE_MASTER_KEY.md  COMPLETED_TASKS.md  COMPLETION_LOG.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIX.md  DREAM_STACK_DEPLOYMENT_FIX.md  Dockerfile  Dockerfile.production  FINAL_OPENROUTER_STATUS.md  FINAL_PROJECT_STATUS.md  FINAL_SETUP_COMPLETE.md  FINAL_WORKING_SOLUTION.md  FREE_AI_MODELS.md  FREE_AI_MODELS_UPDATED.md  FRESH_DEPLOYMENT_READY.md  FRESH_VERCEL_DEPLOYMENT.md  GITHUB_DEPLOYMENT_INSTRUCTIONS.md  GOOD_MORNING.md  HANDOFF_FOR_NEW_SESSION.md  LICENSE  LOGIN_INSTRUCTIONS.md  MASTER_KEY_QUICK_REFERENCE.md  MASTER_KEY_SUMMARY.md  MOBILE_DEPLOYMENT_COMPLETE.md  MOBILE_PLAYGROUND_FIX_COMPLETE.md  MONOREPO_MIGRATION_COMPLETE.md  NANO_GLASS_DESIGN_COMPLETE.md  OPENROUTER_SETUP.md  OPENROUTER_STATUS_UPDATE.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  (+69 more)
Cortex_OS/: README.md  start-dev.bat  start-dev.sh
admin-ui/: .env.production  FEATURES.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
cortex/: __init__.py  config.py  errors.py  main.py  models.py  pipeline.py
cortex-mobile/: .env.production  index.html  package-lock.json  package.json  vite.config.ts
cortex-simple/: index.html  package-lock.json  package.json
monitoring/: alertmanager.yml  alerts.yml  prometheus.yml
tests/: __init__.py  strategies.py
(+115 files in other folders)
