[tool.poetry]
name = "kirio-cortex-router"
version = "0.1.0"
description = "Universal AI Router and Orchestration Layer"
authors = ["Kirio Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
litellm = "^1.0.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
redis = "^5.0.0"
qdrant-client = "^1.7.0"
sentence-transformers = "^2.2.0"
vaderSentiment = "^3.3.2"
python-multipart = "^0.0.6"
httpx = "^0.25.0"
structlog = "^23.2.0"
google-cloud-logging = "^3.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.12.0"
hypothesis = "^6.92.0"
fakeredis = "^2.20.0"
black = "^23.12.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
